# mrnet-autoresearch

./: .gitmodules  README.md  program.md  pyproject.toml
.github/workflows/: mrnet-autoresearch.yml
legacy/top_level_prototypes/: README_TRAINING.md  SOLUTION_SUMMARY.md  advanced_vit.py  check_csv.py  final_demo.py  final_test.py  final_train.py  main.py  requirements.txt  run_model.py  run_model_fixed.py  test_data_loading.py  test_model.py  test_models.py  train_models.sh  train_vit.py
